--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
-sudo: false
-dist: trusty
 language: java
+os:
+  - linux
 jdk:
   - openjdk11
 before_install:
@@ -12,6 +12,9 @@ after_success:
 cache:
   directories:
     - $HOME/.m2
+
+notifications:
+  email: false
 
 env:
   global:
