--- a/pom.xml
+++ b/pom.xml
@@ -41,7 +41,7 @@
     </scm>
 
     <properties>
-        <protobuf.version>3.7.1</protobuf.version>
+        <protobuf.version>3.8.0-rc-1</protobuf.version>
     </properties>
 
     <dependencyManagement>
