--- a/pom.xml
+++ b/pom.xml
@@ -26,7 +26,7 @@
 
     <groupId>io.dropwizard.modules</groupId>
     <artifactId>dropwizard-protobuf</artifactId>
-    <version>2.0.0-2-SNAPSHOT</version>
+    <version>2.0.7-1</version>
     <packaging>jar</packaging>
 
     <name>Dropwizard Protocol Buffers Support</name>
@@ -37,7 +37,7 @@
         <developerConnection>scm:git:git@github.com:dropwizard/dropwizard-protobuf.git</developerConnection>
         <connection>scm:git:https://github.com/dropwizard/dropwizard-protobuf.git</connection>
         <url>https://github.com/dropwizard/dropwizard-protobuf</url>
-        <tag>HEAD</tag>
+        <tag>v2.0.7-1</tag>
     </scm>
 
     <properties>
