--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -13,7 +13,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        java_version: [11, 16]
+        java_version: [11]
         os: [ubuntu-latest]
     steps:
     - uses: actions/checkout@v2.3.2
