--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -23,6 +23,4 @@ jobs:
         distribution: "adopt"
         java-version: ${{ matrix.java_version }}
     - name: Build with Maven
-      run: ./mvnw -B -V -ntp -ff -s .github/settings.xml install -Dmaven.test.skip=true -Dmaven.javadoc.skip=true
-    - name: Run tests
-      run: ./mvnw -B -V -ntp -ff -s .github/settings.xml verify
+      run: ./mvnw -B -V -ntp -ff -s .github/settings.xml -Dmaven.javadoc.skip=true install
