--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -2,10 +2,16 @@ name: "CodeQL"
 
 on:
   push:
-    branches: [master]
+    branches:
+      - 2.1.x
+      - 3.0.x
+      - 4.0.x
   pull_request:
     # The branches below must be a subset of the branches above
-    branches: [master]
+    branches:
+      - 2.1.x
+      - 3.0.x
+      - 4.0.x
     paths:
       - "**.java"
       - "pom.xml"
