--- a/.github/workflows/close_stale.yml
+++ b/.github/workflows/close_stale.yml
@@ -1,15 +1,19 @@
+---
 name: "Close stale issues"
+# yamllint disable-line rule:truthy
 on:
   schedule:
-  - cron: "0 0 * * *"
+    - cron: "0 0 * * *"
 jobs:
   stale:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/stale@28ca1036281a5e5922ead5184a1bbf96e5fc984e # v9
-      with:
-        repo-token: ${{ secrets.GITHUB_TOKEN }}
-        stale-issue-message: 'This issue is stale because it has been open 90 days with no activity. Remove the "stale" label or comment or this will be closed in 14 days.'
-        stale-pr-message: 'This pull request is stale because it has been open 90 days with no activity. Remove the "stale" label or comment or this will be closed in 14 days.'
-        days-before-stale: 90
-        days-before-close: 14
+      - uses: actions/stale@28ca1036281a5e5922ead5184a1bbf96e5fc984e  # v9
+        with:
+          repo-token: ${{ secrets.GITHUB_TOKEN }}
+          # yamllint disable rule:line-length
+          stale-issue-message: 'This issue is stale because it has been open 90 days with no activity. Remove the "stale" label or comment or this will be closed in 14 days.'
+          stale-pr-message: 'This pull request is stale because it has been open 90 days with no activity. Remove the "stale" label or comment or this will be closed in 14 days.'
+          # yamllint enable rule:line-length
+          days-before-stale: 90
+          days-before-close: 14
