--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,7 @@
 
     <properties>
         <protobuf.version>3.25.1</protobuf.version>
+        <sonar.projectKey>dropwizard_dropwizard-protobuf</sonar.projectKey>
     </properties>
 
     <dependencyManagement>
